--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -20,6 +20,10 @@
     <string name="autofillSnackbarAction">View</string>
     <string name="autofillLoginSavedSnackbarMessage">Login saved</string>
     <string name="autofillLoginUpdatedSnackbarMessage">Login updated</string>
+    <string name="autofillDisableAutofillPromptTitle">Do you want to keep using Autofill?</string>
+    <string name="autofillDisableAutofillPromptMessage">You can disable Autofill at any time in Settings.</string>
+    <string name="autofillDisableAutofillPromptPositiveButton">Keep using</string>
+    <string name="autofillDisableAutofillPromptNegativeButton">Disable</string>
 
     <!-- We won't have a translation for this, to be used later. -->
     <string name="trackersOverviewEmpty">No tracking requests were blocked from loading on this page. If a company\'s requests are loaded, it can allow them to profile you.</string>
